# finance-intel-hub

./: .env.example  .gitignore  2026-04-20-finance-knowledge-hub-design-v2.1.md  2026-04-20-finance-knowledge-hub-design-v2.md  2026-04-20-finance-knowledge-hub-design_final.md  AGENTS.md  Makefile  README.md  V1 BUG.md  V1 REPAIR验收方案.md  V2 BUG.md  generate_manual.py  待完成事项.md
server/: pyproject.toml  requirements.txt
server/src/: config.py  main.py
server/src/api/: articles.py  categories.py  crawler.py  export.py  graph.py  lint.py  operations.py  publications.py  schemas.py  search.py  settings.py  skill.py  stats.py  upload.py  wiki.py
server/src/core/: ai_client.py  backlinks.py  crawler.py  db_utils.py  feedback.py  lint_engine.py  operation_logger.py  processor.py  publication_fetcher.py  scheduler.py  storage.py  url_processor.py  vector_store.py  video_processor.py  wiki_compiler.py  wiki_export.py
server/src/db/: engine.py  models.py  seed.py
server/src/db/migrations/: env.py
server/src/prompts/: loader.py
server/src/prompts/v1/: classifier.yaml  cleaner.yaml  mindmap.yaml  publication.yaml  relation.yaml  summarizer.yaml  (+2 more)
server/tests/: conftest.py  test_api_articles.py  test_api_crawler.py  test_api_graph.py  test_api_main.py  test_api_operations.py  test_api_publications.py  test_api_search.py  test_api_skill.py  test_api_upload.py  test_api_wiki.py  test_backlinks.py  test_crawler.py  test_db_engine.py  test_integration.py  test_migrations.py  test_models.py  test_processor.py  test_prompt_loader.py  test_structure.py  test_wiki_export.py
(+31 files in other folders)
